# CNNLngSe

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  entrenar.py  predecir.py  pyproject.toml
.github/workflows/: ci.yml
src/sign_classifier/: __init__.py  batch_predict.py  cli.py  config.py  data_loader.py  download_asl_alphabet.py  evaluate.py  exceptions.py  export.py  generate_augmented_data.py  integrate_external_dataset.py  model.py  predict.py  train.py  visualize_augmentations.py
tests/: __init__.py  test_batch_predict.py  test_cli.py  test_data_loader.py  test_evaluate.py  test_model.py  test_predict.py  test_train.py
