[tool.poetry]
name = "sign-classifier"
version = "1.0.0"
description = "Clasificador de señas de mano usando redes neuronales convolucionales"
authors = ["Developer"]
readme = "README.md"
packages = [{include = "sign_classifier", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = ">=2.10"
numpy = "^1.24"
pillow = "^10.0"
scikit-learn = "^1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
hypothesis = "^6.92"

[tool.poetry.scripts]
sign-classifier = "sign_classifier.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
