[tool.poetry]
name = "sign-classifier"
version = "1.0.0"
description = "Clasificador de señas de mano usando redes neuronales convolucionales"
authors = ["Developer"]
readme = "README.md"
packages = [{include = "sign_classifier", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = ">=2.10"
numpy = "^1.24"
pillow = "^10.0"
scikit-learn = "^1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
hypothesis = "^6.92"
ruff = "^0.9"
pre-commit = "^4.1"
mypy = "^1.15"

[tool.poetry.scripts]
sign-classifier = "sign_classifier.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [".venv", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N", "SIM"]
ignore = ["N818"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
exclude = [".venv", ".git"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
