[tool.poetry]
name = "sign-classifier"
version = "1.0.0"
description = "Clasificador de señas de mano usando redes neuronales convolucionales"
authors = ["Developer"]
readme = "README.md"
packages = [{include = "sign_classifier", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = ">=2.18"
numpy = ">=2.1"
pillow = "^12.2"
scikit-learn = "^1.3"
pydantic-settings = "^2.14.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
hypothesis = "^6.92"
ruff = "^0.9"
mypy = "^1.15"

[tool.poetry.scripts]
sign-classifier = "sign_classifier.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [".venv", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N", "SIM"]
ignore = ["N818"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
exclude = [".venv", ".git"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
